Fix email icon not showing on hidpi screens Update hidpi image url as 2x instead of x2
https://www.pivotaltracker.com/story/show/48366863

--- a/app/assets/stylesheets/frontend/helpers/_feed.scss
+++ b/app/assets/stylesheets/frontend/helpers/_feed.scss
@@ -10,7 +10,7 @@
   font-weight: bold;
   background: image-url('mail-icon.png') 0 40% no-repeat;
   @include hidpi {
-    background-image: image-url('mail-icon-2x.png');
+    background-image: image-url('mail-icon-x2.png');
     background-size: $gutter-two-thirds 14px;
   }
 }
